tests/snapshots/cli__tests__failing-on-nothing-found-trigger.snap
---
source: tests/cli.rs
expression: "CommandResult { args, stdin: stdin.into(), stdout, exit_code }"
---
args:
  - "--fail-none"
  - A
stdin: XYZ
stdout: ""
exit_code: 1
