tests/snapshots/cli__tests__german-symbols.snap
---
source: tests/cli.rs
expression: "CommandResult { args, stdin: stdin.into(), stdout, exit_code }"
---
args:
  - "--german"
  - "--symbols"
stdin: "Duebel -> 1.5mm; \u0010 Wand != 3m²... UEBELTAETER! 😫"
stdout: "Dübel → 1.5mm; \u0010 Wand ≠ 3m²... ÜBELTÄTER! 😫"
exit_code: 0
