tests/snapshots/cli__tests__go-ignores-vendor-directory.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: None,\n    stdout: stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--go"
  - comments
stdin: ~
stdout:
  - "found.go\n"
  - "3:// This is found\n"
  - "\n"
exit_code: 0
