tests/snapshots/cli__tests__language-scoping-inplace-python-dry-run-windows.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin: None, stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--sorted"
  - "--python"
  - function-names
  - foo
  - baz
stdin: ~
stdout:
  - "1-shebanged\n"
  - "9:def foo(bar: int) -> int:\n"
  - "9:def baz(bar: int) -> int:\n"
  - "\n"
  - "1.py\n"
  - "4:def foo(bar: int) -> int:\n"
  - "4:def baz(bar: int) -> int:\n"
  - "\n"
  - "subdir\\2.py\n"
  - "1:def foo(bar: int) -> int:\n"
  - "1:def baz(bar: int) -> int:\n"
  - "\n"
  - "subdir\\subdir\\3.py\n"
  - "1:def foo(bar: int) -> int:\n"
  - "1:def baz(bar: int) -> int:\n"
  - "\n"
exit_code: 0
