tests/snapshots/cli__tests__only-matching-and-line-numbers-outside-search-mode.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args: args.into(), stdin:\n    stdin.map(|s|\n    s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()), stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--threads"
  - "1"
  - "--only-matching"
  - "--line-numbers"
  - A
  - "--"
  - X
stdin:
  - "A\n"
  - B
stdout:
  - "(stdin):1:0-1:X\n"
exit_code: 0
